  * TOne()'s "fmt.pval"" argument has been replaced with the more general 
    "fmt"", which allow to define formats for counts, numbers, percentages 
    AND p-values.
  * SplitPath() gets a further information "fullpath".  
  * StrTrunc() gets two new arguments ellipsis and can truncate strings
    on word boundaries with useWordBoundaries.
  
  
BUGFIXES:
  * Format() will respect eps if defined in a format template "fmt" now.

DEPRECATED:
  * CentralValue() did not survive the "general usefulness-checks".


DescTools 0.99.36 (2020-05-22)
------------------------------

UPDATED FUNCTIONS:
  * Plot Desc.table object now reverses the default color for the second
    mosaicplot to ensure the upper left cell has the same color in both 
    cases.
  * Desc.table() will also report relative risks for rows when verbose is 
    set to 3.
  * Documentation and github integration have been improved (thanks to 
    Vilmantas Gegzna).
  * TMod() will report number of variables in the model and the
    number of estimated coefficients.
  * tol in UnirootAll has been substantially reduced as the default 
    was too coarse.
  * Rev() gets a new interface for arrays.
  * ScheffeTest() gets a formula interface.
  * plot.Desc.numnum can insert a linear model and exponential line now.
  * SpearmanRho() gets a new algorithm for tables and no longer crudely 
    inflates a frequency table to single case presentation.
    
BUGFIXES:
  * PasswordDlg() gets all its required arguments back again.    
    
    


DescTools 0.99.35 (2020-04-26)
------------------------------

NEW FUNCTIONS ADDED:
  * HunterGaston() calculates the index of dicrimination for nominal data, 
    going back to Simpson, published by Hunter-Gaston.
  * Desc interface for classes ts and xts has been added.    
  * New documentation to be published as a pkgdown website (Credits for that 
    go to Vilmantas Gegzna).
  * The vignettes are built now by means of R.rsp    