@@ -31,6 +31,7 @@ UPDATED FUNCTIONS:
   * SplitPath() gets a further information "fullpath".  
   * StrTrunc() gets two new arguments ellipsis and can truncate strings
     on word boundaries with useWordBoundaries.
+  * as.fmt() will allow to set the label of the format template.  
   
   
 BUGFIXES:
